fix: overflow of tables

--- a/public/global.css
+++ b/public/global.css
@@ -51,6 +51,8 @@ button {
 
 table {
 	border-collapse: collapse;
+	overflow-x: auto;
+	display: block;
 }
 
 td, th {
